@@ -4,8 +4,8 @@
 project(Execution_Manager_Exec) : install, dance_exe, naming, \
                                   dance_domainapplicationmanager, \
                                   dance_executionmanager_skel, \
-				  utils, dance_logger, avoids_minimum_corba, \
-				  iortable, dance_split_plan, dance_tools {
+                                  utils, dance_logger, avoids_minimum_corba, \
+                                  iortable, dance_split_plan, dance_tools {
   exename = dance_execution_manager
 
   Source_Files {
