@@ -1,7 +1,8 @@
 // $Id$
+
 #include "ace/Auto_Ptr.h"
-#include "Config_Handlers/DnC_Dump.h"
-#include "Config_Handlers/XML_File_Intf.h"
+#include "tools/Config_Handlers/DnC_Dump.h"
+#include "tools/Config_Handlers/XML_File_Intf.h"
 #include "dance/Logger/Log_Macros.h"
 
 int ACE_TMAIN (int argc, ACE_TCHAR * argv[])
